[package]
name = "mnj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.7"
itertools = "0.10.5"
markdown = "0.3.0"
pulldown-cmark = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

[dev-dependencies]
pretty_assertions = "1"
