[package]
name = "mnj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
pulldown-cmark = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0" }
serde_json = "1.0.85"

[dev-dependencies]
pretty_assertions = "1"
indoc = "1.0.7"
